feat: implement active store switch for lightweight JWT tokens
